--- a/bee_api/requirements.txt
+++ b/bee_api/requirements.txt
@@ -1,39 +1,84 @@
 alembic==0.9.4
 aniso8601==1.3.0
 appdirs==1.4.3
+atomicwrites==1.2.1
+attrs==18.2.0
+Babel==2.6.0
+bcrypt==3.1.4
 beautifulsoup4==4.6.0
 blinker==1.4
+cffi==1.11.5
 click==6.7
+colorama==0.3.9
+coverage==4.5.1
+extras==1.0.0
+fixtures==3.0.0
 Flask==0.12.2
 Flask-API==0.7.1
+Flask-BabelEx==0.9.3
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.3
 Flask-Extension==1.0
 Flask-Fixtures==0.3.7
+Flask-GraphQL==2.0.0
+Flask-JWT-Extended==3.12.0
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.0
+Flask-Principal==0.4.0
 Flask-REST-JSONAPI==0.12.5
 Flask-RESTful==0.3.6
 Flask-Restless==0.17.0
 Flask-Script==2.0.5
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.2
 Flask-WebTest==0.0.9
+Flask-WTF==0.14.2
+gql==0.1.0
+graphene==2.1.3
+graphene-sqlalchemy==2.1.0
+graphql-core==2.1
+graphql-relay==0.4.5
+graphql-server-core==1.1.1
 itsdangerous==0.24
 Jinja2==2.9.6
+jsonschema==2.6.0
+linecache2==1.0.0
 Mako==1.0.7
 MarkupSafe==1.0
 marshmallow==2.13.1
 marshmallow-jsonapi==0.14.0
 mimerender==0.6.0
+more-itertools==4.3.0
 nose==1.3.7
 nose2==0.6.5
 packaging==16.8
+passlib==1.7.1
+pathlib2==2.3.2
+pbr==4.2.0
+pluggy==0.7.1
+promise==2.1
+psycopg2==2.7.5
+py==1.6.0
+pycparser==2.18
+PyJWT==1.6.4
 pyparsing==2.2.0
+pytest==3.8.0
 python-dateutil==2.6.1
 python-editor==1.0.3
 python-mimeparse==1.6.0
 pytz==2017.2
+Rx==1.6.1
+singledispatch==3.4.0.3
 six==1.10.0
+speaklater==1.3
 SQLAlchemy==1.1.10
+testtools==2.3.0
+traceback2==1.4.0
+typing==3.6.4
+unittest2==1.1.0
 waitress==1.0.2
 WebOb==1.7.3
 WebTest==2.0.28
-Werkzeug==0.12.2
+Werkzeug==0.14.1
+WTForms==2.2.1
