--- a/bee_api/requirements.txt
+++ b/bee_api/requirements.txt
@@ -13,7 +13,7 @@ colorama==0.3.9
 coverage==4.5.1
 extras==1.0.0
 fixtures==3.0.0
-Flask==0.12.2
+Flask>=0.12.3
 Flask-API==0.7.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
@@ -46,7 +46,7 @@ jsonschema==2.6.0
 linecache2==1.0.0
 Mako==1.0.7
 MarkupSafe==1.0
-marshmallow==2.13.1
+marshmallow>=2.15.1
 marshmallow-jsonapi==0.14.0
 mimerender==0.6.0
 more-itertools==4.3.0
