--- a/bee_api/requirements.txt
+++ b/bee_api/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.9.4
 aniso8601==1.3.0
 appdirs==1.4.3
+asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
 Babel==2.6.0
@@ -11,9 +12,10 @@ cffi==1.11.5
 click==6.7
 colorama==0.3.9
 coverage==4.5.1
+cryptography==2.3.1
 extras==1.0.0
 fixtures==3.0.0
-Flask>=0.12.3
+Flask==0.12.2
 Flask-API==0.7.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
@@ -40,13 +42,15 @@ graphene-sqlalchemy==2.1.0
 graphql-core==2.1
 graphql-relay==0.4.5
 graphql-server-core==1.1.1
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.9.6
 jsonschema==2.6.0
+jwt==0.5.4
 linecache2==1.0.0
 Mako==1.0.7
 MarkupSafe==1.0
-marshmallow>=2.15.1
+marshmallow==2.13.1
 marshmallow-jsonapi==0.14.0
 mimerender==0.6.0
 more-itertools==4.3.0
@@ -73,6 +77,7 @@ singledispatch==3.4.0.3
 six==1.10.0
 speaklater==1.3
 SQLAlchemy==1.1.10
+SQLAlchemy-Utils==0.33.6
 testtools==2.3.0
 traceback2==1.4.0
 typing==3.6.4
