--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==0.9.4
+alembic==1.0.5
 aniso8601==1.3.0
 appdirs==1.4.3
 asn1crypto==0.24.0
@@ -11,11 +11,11 @@ blinker==1.4
 cffi==1.11.5
 click==6.7
 colorama==0.3.9
-coverage==4.5.1
+coverage==4.5.2
 cryptography==2.3.1
 extras==1.0.0
 fixtures==3.0.0
-Flask==0.12.2
+Flask==1.0.2
 Flask-API==0.7.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
@@ -44,13 +44,13 @@ graphql-relay==0.4.5
 graphql-server-core==1.1.1
 idna==2.7
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 jsonschema==2.6.0
 jwt==0.5.4
 linecache2==1.0.0
 Mako==1.0.7
-MarkupSafe==1.0
-marshmallow==2.13.1
+MarkupSafe==1.1.0
+marshmallow==2.16.3
 marshmallow-jsonapi==0.14.0
 mimerender==0.6.0
 more-itertools==4.3.0
@@ -62,12 +62,13 @@ pathlib2==2.3.2
 pbr==4.2.0
 pluggy==0.7.1
 promise==2.1
-psycopg2==2.7.5
+psycopg2-binary==2.7.6.1
 py==1.6.0
 pycparser==2.18
 PyJWT==1.6.4
 pyparsing==2.2.0
-pytest==3.8.0
+pytest==4.0.1
+pytest-cov==2.6.0
 python-dateutil==2.6.1
 python-editor==1.0.3
 python-mimeparse==1.6.0
@@ -76,12 +77,12 @@ Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.10.0
 speaklater==1.3
-SQLAlchemy==1.1.10
+SQLAlchemy==1.2.15
+tox==3.6.0
 SQLAlchemy-Utils==0.33.6
 testtools==2.3.0
 traceback2==1.4.0
 typing==3.6.4
-unittest2==1.1.0
 waitress==1.0.2
 WebOb==1.7.3
 WebTest==2.0.28
