--- a/.coveragerc
+++ b/.coveragerc
@@ -5,7 +5,7 @@ omit =
     */site-packages/*
     */config.py
     */config.sample.py
-include = *.py
+#include = */bee_api/*
 
 [report]
 # Regexes for lines to exclude from consideration
@@ -24,5 +24,6 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+
 
 ignore_errors = True
