--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - coverage run -m pytest --cov=bee_api
+  - python -m pytest --cov .
 after_success:
   - coveralls
