--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ python:
   - "3.7-dev"
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
+  - pip install coveralls codecov
 script:
   - python -m pytest --cov .
 after_success:
   - coveralls
+  - codecov
   - tar -zcvf files.tgz -T tar_files.txt
 deploy:
   provider: releases
