--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Flask-JWT-Extended==3.14.0
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.3.1
+Flask-Paranoid==0.2.0
 Flask-Principal==0.4.0
 Flask-REST-JSONAPI==0.22.0
 Flask-RESTful==0.3.7
