--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ graphql-core==2.1
 graphql-relay==0.4.5
 graphql-server-core==1.1.1
 idna==2.8
+influxdb==5.2.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jsonschema==2.6.0
@@ -69,8 +70,6 @@ py==1.7.0
 pycparser==2.19
 PyJWT==1.7.1
 pyparsing==2.3.0
-pytest==4.0.2
-pytest-cov==2.6.0
 python-dateutil==2.7.5
 python-editor==1.0.3
 python-mimeparse==1.6.0
